test/e2e/istio/istio-dynamic-scale.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-dynamic-scale
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-dynamic-scale

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-dynamic-scale-vsvc
spec:
  hosts:
  - istio-dynamic-scale
  http:
  - name: primary
    route:
    - destination:
        host: istio-dynamic-scale
        subset: stable
      weight: 100
    - destination:
        host: istio-dynamic-scale
        subset: canary
      weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-dynamic-scale-destrule
spec:
  host: istio-dynamic-scale
  subsets:
  - name: stable
    labels:
      app: istio-dynamic-scale
  - name: canary
    labels:
      app: istio-dynamic-scale

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-dynamic-scale
spec:
  replicas: 5
  strategy:
    canary:
      maxSurge: 0
      dynamicStableScale: true
      abortScaleDownDelaySeconds: 0
      trafficRouting:
        istio:
          virtualService: 
            name: istio-dynamic-scale-vsvc
            routes:
            - primary
          destinationRule:
            name: istio-dynamic-scale-destrule
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 20
      - pause:
          duration: 10s
  selector:
    matchLabels:
      app: istio-dynamic-scale
  template:
    metadata:
      labels:
        app: istio-dynamic-scale
    spec:
      containers:
      - name: istio-dynamic-scale
        image: 'argoproj/rollouts-demo:green'
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
