test/e2e/istio/istio-host-only-tls-split.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-tls-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-host-split-tls

---
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-tls-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-host-split-tls

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-tls-vsvc
spec:
  hosts:
  - istio-host-split-tls
  tls:
  - match:
    - port: 3000
      sniHosts:
      - istio-host-split-tls
    route:
    - destination:
        host: istio-host-split-tls-stable
      weight: 100
    - destination:
        host: istio-host-split-tls-canary
      weight: 0

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-host-split-tls
spec:
  strategy:
    canary:
      canaryService: istio-host-split-tls-canary
      stableService: istio-host-split-tls-stable
      trafficRouting:
        istio:
          virtualService: 
            name: istio-host-split-tls-vsvc
            routes:
            - primary
            tlsRoutes:
            - port: 3000
              sniHosts:
              - istio-host-split-tls
      steps:
      - setWeight: 10
      - pause: {}
  selector:
    matchLabels:
      app: istio-host-split-tls
  template:
    metadata:
      labels:
        app: istio-host-split-tls
    spec:
      containers:
      - name: istio-host-split-tls
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
