test/e2e/istio/istio-host-split-max-traffic-weight.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-max-weight-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-host-split-max-weight

---
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-max-weight-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-host-split-max-weight

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-max-weight-vsvc
spec:
  hosts:
  - istio-host-split-max-weight
  http:
  - name: primary
    route:
    - destination:
        host: istio-host-split-max-weight-stable
      weight: 1000
    - destination:
        host: istio-host-split-max-weight-canary
      weight: 0

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-host-split-max-weight
spec:
  strategy:
    canary:
      canaryService: istio-host-split-max-weight-canary
      stableService: istio-host-split-max-weight-stable
      trafficRouting:
        maxTrafficWeight: 1000
        istio:
          virtualService:
            name: istio-host-split-max-weight-vsvc
            routes:
            - primary
      steps:
      - setWeight: 200
      - pause: {}
  selector:
    matchLabels:
      app: istio-host-split-max-weight
  template:
    metadata:
      labels:
        app: istio-host-split-max-weight
    spec:
      containers:
      - name: istio-host-split-max-weight
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
