test/e2e/istio/istio-rollout-abort-delete-all-canary-pods.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-canary
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: v1
kind: Service
metadata:
  name: istio-host-split-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-host-split

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-vsvc
spec:
  hosts:
    - istio-host-split
  http:
    - name: primary
      route:
        - destination:
            host: istio-host-split-stable
          weight: 100
        - destination:
            host: istio-host-split-canary
          weight: 0

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-host-split
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: istio-host-split-canary
      stableService: istio-host-split-stable
      trafficRouting:
        istio:
          virtualService:
            name: istio-host-split-vsvc
            routes:
              - primary
      steps:
        - setCanaryScale:
            replicas: 2
        - setWeight: 20
        - pause: {}
        - setCanaryScale:
            replicas: 4
        - setWeight: 40
        - pause: {}
  selector:
    matchLabels:
      app: istio-host-split
  template:
    metadata:
      labels:
        app: istio-host-split
    spec:
      containers:
        - name: istio-host-split
          image: nginx:1.19-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 16Mi
              cpu: 5m
