test/e2e/istio/istio-subset-split-ping-pong.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-subset-split
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-subset-split
---

apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-subset-split

---
apiVersion: v1
kind: Service
metadata:
  name: pong
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-subset-split

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-subset-split-vsvc
spec:
  hosts:
  - istio-subset-split
  http:
  - name: primary
    route:
    - destination:
        host: istio-subset-split
        subset: ping
      weight: 100
    - destination:
        host: istio-subset-split
        subset: pong
      weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-subset-split-destrule
spec:
  host: istio-subset-split
  subsets:
  - name: ping
    labels:
      app: istio-subset-split
  - name: pong
    labels:
      app: istio-subset-split

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-subset-split
spec:
  strategy:
    canary:
      pingPong:
        pingService: ping
        pongService: pong
      trafficRouting:
        istio:
          virtualService: 
            name: istio-subset-split-vsvc
            routes:
            - primary
          destinationRule:
            name: istio-subset-split-destrule
            canarySubsetName: pong
            stableSubsetName: ping
      steps:
      - setWeight: 25
      - pause: { duration: 5s }
  selector:
    matchLabels:
      app: istio-subset-split
  template:
    metadata:
      labels:
        app: istio-subset-split
    spec:
      containers:
      - name: istio-subset-split
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
