test/e2e/istio/istio-subset-split-single-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-subset-split-single-route
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-subset-split-single-route

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-subset-split-single-route-vsvc
spec:
  hosts:
  - istio-subset-split-single-route
  http:
  - route:
    - destination:
        host: istio-subset-split-single-route
        subset: stable
      weight: 100
    - destination:
        host: istio-subset-split-single-route
        subset: canary
      weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-subset-split-single-route-destrule
spec:
  host: istio-subset-split-single-route
  subsets:
  - name: stable
    labels:
      app: istio-subset-split-single-route
  - name: canary
    labels:
      app: istio-subset-split-single-route

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-subset-split-single-route
spec:
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: istio-subset-split-single-route-vsvc
          destinationRule:
            name: istio-subset-split-single-route-destrule
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 10
      - pause: {}
  selector:
    matchLabels:
      app: istio-subset-split-single-route
  template:
    metadata:
      labels:
        app: istio-subset-split-single-route
    spec:
      containers:
      - name: istio-subset-split-single-route
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
